# local-llm-api-server

./: .gitignore  DEVELOPMENT_LOG.md  README.md  main.py  performance_test.py  pyproject.toml  test_concurrent_performance.py
.claude/: CLAUDE.md
chat/: models.py  router.py  service.py
core/: logging.py  middleware.py
model/: model_manager.py
scripts/: ollama_scenario1.bat  ollama_scenario2.bat  ollama_scenario3.bat  ollama_scenario4.bat  ollama_scenario5.bat  run_dev.bat  run_dev.sh  test_scenarios.bat
templates/: base.py  qwen.py  service.py
