[project]
name = "local-llm-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "ollama>=0.3.3",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]